cmake_minimum_required(VERSION 2.8)

project("loco")

option( LOCOPLUGINS_OSGVIEW "OSG View" OFF )
option( LOCOPLUGINS_BENCHMARK "Benchmark" ON )
option( LOCOPLUGINS_SAMPLE "Sample plugin" OFF)
option( LOCOPLUGINS_RTAUDIO "RtAudio wrapper" OFF)
option( LOCOPLUGINS_SIGSLOT "Signal-Slot test" ON)
option( LOCOPLUGINS_GLVIEWER "OpenGL model viewer" OFF)

if( LOCOPLUGINS_SAMPLE )
  add_subdirectory( sample )
endif()
if( LOCOPLUGINS_OSGVIEW )
  add_subdirectory( osgview )
endif()
if( LOCOPLUGINS_BENCHMARK )
  add_subdirectory( benchmark )
endif()
if( LOCOPLUGINS_RTAUDIO )
  add_subdirectory( rtaudio )
endif()
if( LOCOPLUGINS_SIGSLOT )
  add_subdirectory( sig-slot-test )
endif()
if( LOCOPLUGINS_GLVIEWER )
  add_subdirectory( glviewer )
endif()
